Fix Facebook alignment

--- a/sass/partials/_sharing.scss
+++ b/sass/partials/_sharing.scss
@@ -6,3 +6,5 @@
 }
 
 #fb-root { display: none; }
+
+.fb_iframe_widget span { vertical-align: baseline !important; }
